# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  tox.yml
src/pre_commit_hooks/: check_filename.py
tests/: test_check_filename.py
